--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,9 @@ author_email = botamochi6277@icloud.com
 description = colorful logger
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
+url = https://github.com/botamochi6277/colorful_logger
 project_urls =
-    Bug Tracker = https://github.com/pypa/sampleproject/issues
+    Bug Tracker = https://github.com/botamochi6277/colorful_logger/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
